--- a/app/templates/components/public/includes/footer.html
+++ b/app/templates/components/public/includes/footer.html
@@ -8,7 +8,7 @@
             <script>
               document.write(new Date().getFullYear());
             </script>
-            Development. All Rights Reserved.
+            Bondowoso Tourism. All Rights Reserved.
           </p>
         </div>
       </div>
