--- a/app/templates/control_panel/auth/reset-password.html
+++ b/app/templates/control_panel/auth/reset-password.html
@@ -4,7 +4,7 @@
   <div class="container my-auto">
     <div class="row justify-content-center align-items-center pt-6rem pb-5">
       <div class="col-lg-5">
-        <div class="card shadow rounded-3">
+        <div class="card border-0 shadow rounded-3">
           <div class="card-body p-lg-5 py-5 px-4">
             <div class="text-center mb-5">
               <h3 class="fw-bold fs-4 mb-0">Pengaturan ulang password</h3>
@@ -29,13 +29,13 @@
                 </div>
                 {% else %} {{ form.confirm(class="form-control") }} {% endif %}
               </div>
-              <div class="d-grid">{{ form.submit(class="btn btn-primary") }}</div>
+              <div class="d-grid">{{ form.submit(class="btn btn-secondary text-white rounded-5") }}</div>
             </form>
           </div>
           <div class="card-footer p-3">
             <div class="d-flex flex-column justify-content-center align-items-center">
-              <a class="small text-decoration-none" href="{{ url_for('control_panel_app.register') }}">Buat sebuah akun!</a>
-              <a class="small text-decoration-none" href="{{ url_for('control_panel_app.login') }}">Sudah memiliki akun? Masuk!</a>
+              <a class="small link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('control_panel_app.register') }}">Buat sebuah akun!</a>
+              <a class="small link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('control_panel_app.login') }}">Sudah memiliki akun? Masuk!</a>
             </div>
           </div>
         </div>
