--- a/app/templates/public/services/services.html
+++ b/app/templates/public/services/services.html
@@ -1,58 +1,99 @@
 {% extends 'components/public/base.html' %} {% set active_page = 'services' %} {% block content %}
-<!-- Services -->
-<div class="services d-flex bg-body-tertiary min-vh-100">
+<!-- Banner -->
+<div class="banner d-flex bg-hero h-20rem">
   <div class="container my-auto">
-    <div class="row justify-content-center align-items-center row-gap-4 pt-6rem pb-5">
-      <div class="col-lg-5">
-        <div class="card border-hover shadow-sm rounded-3">
-          <div class="card-body">
-            <div class="d-flex flex-column justify-content-center align-items-center row-gap-3 text-center">
-              <svg xmlns="http://www.w3.org/2000/svg" height="2.5em" fill="currentColor" viewBox="0 0 16 16">
-                <path d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z" />
-              </svg>
-              <a class="h6 fw-semibold fs-5 text-decoration-none stretched-link mb-0" href="{{ url_for('public_app.usage_help') }}">Bantuan Penggunaan</a>
+    <div class="row justify-content-center align-items-center">
+      <div class="col-lg-10">
+        <div class="text-white text-center">
+          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">Layanan</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End of Banner -->
+
+<!-- Page Wrapper -->
+<div class="page-wrapper bg-body-tertiary">
+  <div class="container">
+    <div class="row justify-content-center align-items-center pt-5">
+      <div class="col-lg-10">
+        <h3 class="fw-semibold fs-5 mb-0" data-aos="fade-up">Lorem ipsum dolor sit amet consectetur:</h3>
+      </div>
+    </div>
+    <div class="row justify-content-center align-items-center row-gap-4 py-5">
+      <div class="col-lg-5 d-flex align-self-stretch">
+        <div class="card hover-upwards border-0 shadow-sm rounded-3">
+          <div class="card-body p-4">
+            <div class="d-flex flex-column flex-lg-row row-gap-3 column-gap-4">
+              <div class="flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" height="2.5em" fill="currentColor" viewBox="0 0 16 16">
+                  <path d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002V12H7.971V5.338h-.065L6.072 6.656V5.385l1.899-1.383z" />
+                </svg>
+              </div>
+              <div class="d-flex flex-column row-gap-2">
+                <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.usage_help') }}">Bantuan Penggunaan</a>
+                <p class="small text-clamp-3 mb-0">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque placeat vel ipsa, sint dolores ipsum.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque placeat vel ipsa, sint dolores ipsum.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-5">
-        <div class="card border-hover shadow-sm rounded-3">
-          <div class="card-body">
-            <div class="d-flex flex-column justify-content-center align-items-center row-gap-3 text-center">
-              <svg xmlns="http://www.w3.org/2000/svg" height="2.5em" fill="currentColor" viewBox="0 0 16 16">
-                <path
-                  d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306"
-                />
-              </svg>
-              <a class="h6 fw-semibold fs-5 text-decoration-none stretched-link mb-0" href="{{ url_for('public_app.system_data') }}">Data Sistem</a>
+      <div class="col-lg-5 d-flex align-self-stretch">
+        <div class="card hover-upwards border-0 shadow-sm rounded-3">
+          <div class="card-body p-4">
+            <div class="d-flex flex-column flex-lg-row row-gap-3 column-gap-4">
+              <div class="flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" height="2.5em" fill="currentColor" viewBox="0 0 16 16">
+                  <path
+                    d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.646 6.24v.07H5.375v-.064c0-1.213.879-2.402 2.637-2.402 1.582 0 2.613.949 2.613 2.215 0 1.002-.6 1.667-1.287 2.43l-.096.107-1.974 2.22v.077h3.498V12H5.422v-.832l2.97-3.293c.434-.475.903-1.008.903-1.705 0-.744-.557-1.236-1.313-1.236-.843 0-1.336.615-1.336 1.306"
+                  />
+                </svg>
+              </div>
+              <div class="d-flex flex-column row-gap-2">
+                <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.system_data') }}">Data Sistem</a>
+                <p class="small text-clamp-3 mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque placeat vel ipsa, sint dolores ipsum.</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-5">
-        <div class="card border-hover shadow-sm rounded-3">
-          <div class="card-body">
-            <div class="d-flex flex-column justify-content-center align-items-center row-gap-3 text-center">
-              <svg xmlns="http://www.w3.org/2000/svg" height="2.5em" fill="currentColor" viewBox="0 0 16 16">
-                <path
-                  d="M7.918 8.414h-.879V7.342h.838c.78 0 1.348-.522 1.342-1.237 0-.709-.563-1.195-1.348-1.195-.79 0-1.312.498-1.348 1.055H5.275c.036-1.137.95-2.115 2.625-2.121 1.594-.012 2.608.885 2.637 2.062.023 1.137-.885 1.776-1.482 1.875v.07c.703.07 1.71.64 1.734 1.917.024 1.459-1.277 2.396-2.93 2.396-1.705 0-2.707-.967-2.754-2.144H6.33c.059.597.68 1.06 1.541 1.066.973.006 1.6-.563 1.588-1.354-.006-.779-.621-1.318-1.541-1.318"
-                />
-                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8" />
-              </svg>
-              <a class="h6 fw-semibold fs-5 text-decoration-none stretched-link mb-0" href="{{ url_for('public_app.tour_list') }}">Daftar Wisata</a>
+      <div class="col-lg-5 d-flex align-self-stretch">
+        <div class="card hover-upwards border-0 shadow-sm rounded-3">
+          <div class="card-body p-4">
+            <div class="d-flex flex-column flex-lg-row row-gap-3 column-gap-4">
+              <div class="flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" height="2.5em" fill="currentColor" viewBox="0 0 16 16">
+                  <path
+                    d="M7.918 8.414h-.879V7.342h.838c.78 0 1.348-.522 1.342-1.237 0-.709-.563-1.195-1.348-1.195-.79 0-1.312.498-1.348 1.055H5.275c.036-1.137.95-2.115 2.625-2.121 1.594-.012 2.608.885 2.637 2.062.023 1.137-.885 1.776-1.482 1.875v.07c.703.07 1.71.64 1.734 1.917.024 1.459-1.277 2.396-2.93 2.396-1.705 0-2.707-.967-2.754-2.144H6.33c.059.597.68 1.06 1.541 1.066.973.006 1.6-.563 1.588-1.354-.006-.779-.621-1.318-1.541-1.318"
+                  />
+                  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8" />
+                </svg>
+              </div>
+              <div class="d-flex flex-column row-gap-2">
+                <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.tour_list') }}">Daftar Wisata</a>
+                <p class="small text-clamp-3 mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque placeat vel ipsa, sint dolores ipsum.</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-5">
-        <div class="card border-hover shadow-sm rounded-3">
-          <div class="card-body">
-            <div class="d-flex flex-column justify-content-center align-items-center row-gap-3 text-center">
-              <svg xmlns="http://www.w3.org/2000/svg" height="2.5em" fill="currentColor" viewBox="0 0 16 16">
-                <path d="M7.519 5.057q.33-.527.657-1.055h1.933v5.332h1.008v1.107H10.11V12H8.85v-1.559H4.978V9.322c.77-1.427 1.656-2.847 2.542-4.265ZM6.225 9.281v.053H8.85V5.063h-.065c-.867 1.33-1.787 2.806-2.56 4.218" />
-                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8" />
-              </svg>
-              <a class="h6 fw-semibold fs-5 text-decoration-none stretched-link mb-0" href="{{ url_for('public_app.tour_recommendation') }}">Rekomendasi Wisata</a>
+      <div class="col-lg-5 d-flex align-self-stretch">
+        <div class="card hover-upwards border-0 shadow-sm rounded-3">
+          <div class="card-body p-4">
+            <div class="d-flex flex-column flex-lg-row row-gap-3 column-gap-4">
+              <div class="flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" height="2.5em" fill="currentColor" viewBox="0 0 16 16">
+                  <path d="M7.519 5.057q.33-.527.657-1.055h1.933v5.332h1.008v1.107H10.11V12H8.85v-1.559H4.978V9.322c.77-1.427 1.656-2.847 2.542-4.265ZM6.225 9.281v.053H8.85V5.063h-.065c-.867 1.33-1.787 2.806-2.56 4.218" />
+                  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8" />
+                </svg>
+              </div>
+              <div class="d-flex flex-column row-gap-2">
+                <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.tour_recommendation') }}">Rekomendasi Wisata</a>
+                <p class="small text-clamp-3 mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque placeat vel ipsa, sint dolores ipsum.</p>
+              </div>
             </div>
           </div>
         </div>
@@ -60,5 +101,5 @@
     </div>
   </div>
 </div>
-<!-- End of Services -->
+<!-- End of Page Wrapper -->
 {% endblock %}
