--- a/app/templates/components/public/includes/navbar.html
+++ b/app/templates/components/public/includes/navbar.html
@@ -1,18 +1,18 @@
-<nav class="navbar navbar-expand-lg bg-body border-bottom fixed-top">
+<nav class="navbar navbar-expand-lg bg-body border-bottom">
   <div class="container">
     <a class="navbar-brand" href="{{ url_for('public_app.homepage') }}">
-      <h1 class="fw-bold fs-4 my-auto">Development</h1>
+      <h1 class="fw-bold fs-4 my-auto">Bondowoso Tourism</h1>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="offcanvas offcanvas-end border-0" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
       <div class="offcanvas-header">
-        <h1 class="offcanvas-title fw-bold fs-4" id="offcanvasNavbarLabel">Development</h1>
+        <h1 class="offcanvas-title fw-bold fs-4" id="offcanvasNavbarLabel">Bondowoso Tourism</h1>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
-        <ul class="navbar-nav mx-auto">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <a class="{{ 'nav-link active' if active_page == 'home' else 'nav-link' }}" aria-current="page" href="{{ url_for('public_app.homepage') }}">Beranda</a>
           </li>
@@ -35,7 +35,16 @@
         <ul class="navbar-nav">
           {% if current_user.is_authenticated %}
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ current_user.name }}</a>
+            <!-- <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ current_user.name }}</a> -->
+            <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <div class="d-flex align-items-center column-gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" height="1.5em" fill="currentColor" viewBox="0 0 16 16">
+                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+                </svg>
+                <p class="mb-0">{{ current_user.name }}</p>
+              </div>
+            </a>
             <ul class="dropdown-menu dropdown-menu-end">
               <li><a class="dropdown-item" href="{{ url_for('control_panel_app.profile', id=current_user.id) }}">Profil</a></li>
               <li><a class="dropdown-item" href="{{ url_for('control_panel_app.logout') }}">Keluar</a></li>
@@ -43,7 +52,7 @@
           </li>
           {% else %}
           <li class="nav-item my-auto me-2">
-            <a class="btn btn-primary rounded-5 py-1 px-3 ms-lg-2" href="{{ url_for('control_panel_app.login') }}" role="button">Masuk</a>
+            <a class="btn btn-secondary text-white rounded-5 py-1 px-3" href="{{ url_for('control_panel_app.login') }}" role="button">Masuk</a>
           </li>
           {% endif %}
         </ul>
