--- a/app/templates/components/public/includes/toast.html
+++ b/app/templates/components/public/includes/toast.html
@@ -2,7 +2,7 @@
 <div class="toast-container position-fixed bottom-0 end-0 p-3">
   <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
-      <strong class="me-auto">Development</strong>
+      <strong class="me-auto">Bondowoso Tourism</strong>
       <small>just now</small>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
