--- a/app/templates/public/about/about.html
+++ b/app/templates/public/about/about.html
@@ -1,26 +1,37 @@
 {% extends 'components/public/base.html' %} {% set active_page = 'about' %} {% block content %}
-<!-- About -->
-<div class="about d-flex bg-body-tertiary min-vh-100">
+<!-- Banner -->
+<div class="banner d-flex bg-hero h-20rem">
   <div class="container my-auto">
-    <div class="row flex-column-reverse flex-lg-row-reverse justify-content-evenly align-items-start row-gap-4 pt-6rem pb-5">
-      <div class="col-lg-5">
-        <div class="d-flex flex-column row-gap-4">
-          <h3 class="fw-bold fs-4 mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, perferendis!</h3>
-          <div class="d-flex flex-column row-gap-3">
-            <p class="mb-0">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse enim voluptas, inventore itaque, provident dignissimos ab unde rem atque nam exercitationem! Non, iure. At expedita eos, voluptatibus officia repudiandae dolorum.
-            </p>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quisquam ullam totam. Accusamus, ducimus reiciendis corrupti unde, sequi rerum atque doloribus culpa, velit neque odit.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-5">
-        <div class="ratio ratio-4x3 border rounded-3 overflow-hidden">
-          <img src="{{ url_for('static', filename='media/Test.jpg') }}" class="ratio-content pe-none" style="object-fit: cover" alt="Test" />
+    <div class="row justify-content-center align-items-center">
+      <div class="col-lg-10">
+        <div class="text-white text-center">
+          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">Tentang Kami</h2>
         </div>
       </div>
     </div>
   </div>
 </div>
-<!-- End of About -->
+<!-- End of Banner -->
+
+<!-- Page Wrapper -->
+<div class="page-wrapper bg-body-tertiary">
+  <div class="container">
+    <div class="row flex-column-reverse flex-lg-row-reverse justify-content-evenly align-items-center row-gap-4 py-5">
+      <div class="col-lg-5">
+        <div class="d-flex flex-column row-gap-4">
+          <h3 class="fw-semibold fs-4 mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt.</h3>
+          <div class="d-flex flex-column row-gap-3">
+            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, atque? Eum ab explicabo blanditiis iure atque sapiente, id commodi a nesciunt alias aut nobis velit voluptate, vero earum reiciendis vel!</p>
+            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, saepe perspiciatis. Eos totam nesciunt dolorem asperiores necessitatibus similique at veritatis repellendus est laboriosam, dolor eaque!</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae itaque beatae nisi ab doloribus nemo, optio facere non voluptatem quae excepturi quam eum amet neque quisquam? Nisi ad minus alias?</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-5">
+        <img src="{{ url_for('static', filename='media/uploads/default.jpg') }}" class="img-fluid pe-none rounded-3" alt="default" />
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End of Page Wrapper -->
 {% endblock %}
