--- a/app/templates/public/services/system_data/sub-criteria.html
+++ b/app/templates/public/services/system_data/sub-criteria.html
@@ -101,4 +101,14 @@
   </div>
 </div>
 <!-- End of Page Wrapper -->
+
+<!-- Toast -->
+{% include 'components/public/includes/toast.html' %}
+<!-- End of Toast -->
+{% endblock %} {% block javascript %}
+<script>
+  $(function () {
+    $(".toast").toast("show");
+  });
+</script>
 {% endblock %}
