--- a/app/templates/public/services/tour_list/tour-list.html
+++ b/app/templates/public/services/tour_list/tour-list.html
@@ -3,7 +3,7 @@
 <div class="page-wrapper d-flex bg-body-tertiary min-vh-100">
   <div class="container my-auto">
     <div class="row justify-content-center align-items-center pt-6rem pb-5">
-      <div class="col-lg-10">
+      <div class="col-lg-12">
         <div class="card shadow rounded-3">
           <div class="card-body d-flex flex-column row-gap-4 py-5 px-4 p-lg-5">
             <div class="d-flex flex-column row-gap-4">
@@ -112,4 +112,14 @@
   </div>
 </div>
 <!-- End of Page Wrapper -->
+
+<!-- Toast -->
+{% include 'components/public/includes/toast.html' %}
+<!-- End of Toast -->
+{% endblock %} {% block javascript %}
+<script>
+  $(function () {
+    $(".toast").toast("show");
+  });
+</script>
 {% endblock %}
