--- a/app/templates/public/services/usage_help/usage-help_form.html
+++ b/app/templates/public/services/usage_help/usage-help_form.html
@@ -1,14 +1,25 @@
 {% extends 'components/public/base.html' %} {% set active_page = 'usage_help' %} {% block content %}
-<!-- Page Wrapper -->
-<div class="page-wrapper d-flex bg-body-tertiary min-vh-100">
+<!-- Banner -->
+<div class="banner d-flex bg-hero h-20rem">
   <div class="container my-auto">
-    <div class="row justify-content-center align-items-center pt-6rem pb-5">
+    <div class="row justify-content-center align-items-center">
       <div class="col-lg-10">
-        <div class="card shadow rounded-3">
+        <div class="text-white text-center">
+          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">{{operation}} Bantuan Penggunaan</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End of Banner -->
+
+<!-- Page Wrapper -->
+<div class="page-wrapper bg-body-tertiary">
+  <div class="container my-auto">
+    <div class="row justify-content-center align-items-center py-5">
+      <div class="col-lg-10">
+        <div class="card border-0 shadow rounded-3">
           <div class="card-body p-lg-5 py-5 px-4">
-            <div class="text-center mb-5">
-              <h3 class="fw-bold fs-4 mb-0">{{operation}} Bantuan Penggunaan</h3>
-            </div>
             <form enctype="multipart/form-data" method="POST">
               {{ form.hidden_tag() }}
               <div class="mb-3">
@@ -39,8 +50,8 @@
                 {% else %} {{ form.image(class="form-control", type="file") }} {% endif %}
               </div>
               <div class="d-flex flex-row justify-content-end align-items-center column-gap-2">
-                <a class="btn btn-secondary" href="{{ url_for('public_app.usage_help') }}" role="button">Batal</a>
-                {{ form.submit(class="btn btn-primary") }}
+                <a class="btn btn-light border border-secondary rounded-5 py-1 px-3" href="{{ url_for('public_app.usage_help') }}" role="button">Batal</a>
+                {{ form.submit(class="btn btn-dark rounded-5 py-1 px-3") }}
               </div>
             </form>
           </div>
